fix(backend): MarkService and UserService