@@ -7,6 +7,8 @@ import software.ulpgc.netlikes.model.MarkId;
 import software.ulpgc.netlikes.repository.FilmRepository;
 import software.ulpgc.netlikes.repository.MarkRepository;
 import software.ulpgc.netlikes.repository.UserRepository;
+import software.ulpgc.netlikes.dto.FilmResponseDTO;
+
 
 import java.util.stream.Collectors;
 import java.util.List;
@@ -54,14 +56,29 @@ public class MarkService {
         return markRepository.existsById(new MarkId(email, filmId));
     }
 
-    public List<Film> getFilmsByMarkType(String email, Mark.Type type) {
+    public Optional<Mark> getMark(String email, Integer filmId) {
+        return markRepository.findById(new MarkId(email, filmId));
+    }
+
+    public List<FilmResponseDTO> getFilmsByMarkType(String email, Mark.Type type) {
         return markRepository.findAll().stream()
                 .filter(m -> m.getUser().getEmail().equals(email) && m.getType() == type)
                 .map(Mark::getFilm)
-                .collect(Collectors.toList());
+                .map(this::toFilmDTO)
+                .toList();
     }
 
-    public Optional<Mark> getMark(String email, Integer filmId) {
-        return markRepository.findById(new MarkId(email, filmId));
+    private FilmResponseDTO toFilmDTO(Film film) {
+        FilmResponseDTO dto = new FilmResponseDTO();
+        dto.setId(film.getId());
+        dto.setTitle(film.getTitle());
+        dto.setPosterPath(film.getPosterPath());
+        dto.setTagLine(film.getTagLine());
+        dto.setOverView(film.getOverView());
+        dto.setRuntime(film.getRuntime()); 
+        dto.setAgeRating(film.getAgeRating());
+        dto.setAdult(film.isAdult());
+        dto.setReleaseDate(film.getReleaseDate());
+        return dto;
     }
 }
